<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">6pk</string>


    <!-- Temporary strings for default or temp hard coded sections of app -->
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sampleWorkout">Sample Workout: crunches - 45 sec, easy</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_statisctics">StatiscticsActivity</string>

    <!-- Start fragment, pick a workout length and difficulty -->
    <string name="startWorkoutButton">BEGIN WORKOUT</string>
    <string name="startDifficultyText">Difficulty:</string>
    <string name="startTimeText">minutes</string>
    <string name="hardButton">HARD</string>
    <string name="mediumButton">MEDIUM</string>
    <string name="easyButton">EASY</string>

    <!-- PreviewActivity, see itinerary before starting a workout -->
    <string name="previewItineraryText">Itinerary for your</string>
    <string name="previewDifficultyText">workout:</string>
    <string name="startButton">START</string>
    <string name="previewHelpClickText">(click a workout for more details)</string>
    <string name="buttonCancelPreview">CANCEL</string>
    <string name="workout_dialog_ok">OK</string>
    <string name="alert_dialog_delete">DELETE</string>

    <!-- WorkoutActivity, during a workout see current and next exercise and timer -->
    <string name="pauseButtonText">|| PAUSE</string>
    <string name="resumeButtonText">|> RESUME</string>
    <string name="cancelWorkoutButton">CANCEL</string>
    <string name="endEarlyWorkoutButton">END EARLY</string>
    <string name="currExerciseEndTime">Ends at</string>

    <!-- HistoryFragment, see past workouts -->
    <string name="showStatsButtonText">SHOW STATS</string>

    <!-- StatisticsActivity, see stats -->
    <string name="backHistoryButtonText">BACK</string>
    <string name="statsLevelsText">Level:</string>
    <string name="initialStatsLevel">--</string>
    <string name="rectusText">Rectus:</string>
    <string name="obliqueText">Oblique:</string>
    <string name="transverseText">Transverse:</string>

    <!-- FeedbackActivity, provide feedback on completed workout or quit without saving -->
    <string name="feedback_dialog_no">NO</string>
    <string name="feedback_dialog_yes">YES</string>
    <string name="feedback_dialog_delete">Finish workout without saving?</string>
    <string name="text_easy_seek">easy</string>
    <string name="text_hard_seek">hard</string>
    <string name="saveWorkoutButton">SAVE</string>
    <string name="deleteWorkoutButton">DELETE</string>

    <!-- PreferenceFragment, user preferences -->
    <string name="settings_account_preferences_text">Account Preferences</string>
    <string name="settings_title_preferences_intent_preference">User Profile</string>
    <string name="settings_summary_preferences_intent_preference">Name, Goals, etc</string>
    <string name="settings_notification_settings_text">Notification Settings</string>
    <string name="settings_title_activity_preference">Reminders</string>
    <string name="settings_sharing_text"><![CDATA[Privacy & Sharing]]></string>
    <string name="settings_title_daily_goal_preference">Daily Goals</string>
    <string name="settings_title_milestones_preference"><![CDATA[Streaks & Milestones]]></string>
    <string name="settings_title_name_preference">Name:</string>
    <string name="settings_title_goal_preference">Goal Workouts Per Week:</string>
    <string name="settings_share_workout_preference">Completed Workout</string>

    <!--<string name="settings_title_share_photo_preference">Progress Image</string>-->
    <string name="settings_share_time_preference"><![CDATA[Time & Location]]></string>
    <string name="prefs_key">sharedprefskey</string>
    <string name="initial_input">initial_input</string>
    <string name="rectusStatLevel">rectusStatLevelPreference</string>
    <string name="obliquesStatLevel">obliquesStatLevelPreference</string>
    <string name="transverseStatLevel">transverseStatLevelPreference</string>
    <string name="rectusStatProgress">rectusStatProgressPreference</string>
    <string name="obliquesStatProgress">obliquesStatProgressPreference</string>
    <string name="transverseStatProgress">transverseStatProgressPreference</string>


</resources>
