<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="left">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/sixPkLabel"
        android:layout_gravity="center_horizontal"
        android:textSize="48dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewLogo"
        android:src="@drawable/logo1"
        android:layout_gravity="center" />
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTimeText"
            android:id="@+id/textViewTime"
            android:layout_marginTop="10dp" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/numberPicker"
            android:editable="false"
            android:layout_marginLeft="100dp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startDifficultyText"
            android:id="@+id/textViewDifficulty"
            android:layout_marginTop="10dp" />

        <RadioGroup
            android:id="@+id/difficulty_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/easyButton"
                android:id="@+id/radioButtonEasy"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/mediumButton"
                android:id="@+id/radioButtonMedium"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hardButton"
                android:id="@+id/radioButtonHard"/>
        </RadioGroup>


    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/startWorkoutButton"
        android:id="@+id/buttonStartWorkoutPrev"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="140dp"
        android:layout_gravity="bottom"/>

</LinearLayout>
