<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPrevItinerary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previewItineraryText" />

            <EditText
                android:id="@+id/editTextPrevItinerary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPrevDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textViewPrevDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previewDifficultyText" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPrevHelpClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/previewHelpClickText" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:onClick="onStartClicked"
            android:text="@string/startButton" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonPrevCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="5dp"
        android:onClick="onCancelClicked"
        android:text="@string/buttonCancelPreview" />

    <ListView
        android:id="@+id/listViewPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="100dp" />
</FrameLayout>
