<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <!-- NEED TO: change the textview/imageview pairs according to what the current and next workouts
    are in the routine-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/workoutCurrExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:text="Crunches"
            android:textSize="30dp" />

            <ImageView
                android:id="@+id/imageViewCurrExercise"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/workoutCurrExerciseEndTimeText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/currExerciseEndTime"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/workoutCurrExerciseEndTimeNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20dp" />
        </LinearLayout>


        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="191dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="72dp" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:onClick="onPauseClicked"
            android:layout_weight="1"
            android:text="@string/pauseButtonText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:background="#00000000"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/workoutNextExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Side Plank"
            android:textSize="24dp" />

        <ImageView
            android:id="@+id/imageViewNextExercise"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelWorkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:onClick="onCancelWorkoutClicked"
            android:text="@string/cancelWorkoutButton" />

        <Button
            android:id="@+id/workoutEndEarlyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:onClick="onEndEarlyClicked"
            android:text="@string/endEarlyWorkoutButton" />
    </LinearLayout>

</LinearLayout>
